; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sslbuffertest.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sslbuffertest.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TLS1_VERSION = common dso_local global i32 0, align 4
@serverctx = common dso_local global i32 0, align 4
@clientctx = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Failed to create SSL_CTX pair\0A\00", align 1
@test_func = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = call i8* @test_get_argument(i32 0)
  store i8* %4, i8** %2, align 8
  %5 = call i32 @TEST_ptr(i8* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = call i8* @test_get_argument(i32 1)
  store i8* %8, i8** %3, align 8
  %9 = call i32 @TEST_ptr(i8* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %7, %0
  store i32 0, i32* %1, align 4
  br label %25

12:                                               ; preds = %7
  %13 = call i32 (...) @TLS_server_method()
  %14 = call i32 (...) @TLS_client_method()
  %15 = load i32, i32* @TLS1_VERSION, align 4
  %16 = load i8*, i8** %2, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @create_ssl_ctx_pair(i32 %13, i32 %14, i32 %15, i32 0, i32* @serverctx, i32* @clientctx, i8* %16, i8* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %12
  %21 = call i32 @TEST_error(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %25

22:                                               ; preds = %12
  %23 = load i32, i32* @test_func, align 4
  %24 = call i32 @ADD_ALL_TESTS(i32 %23, i32 9)
  store i32 1, i32* %1, align 4
  br label %25

25:                                               ; preds = %22, %20, %11
  %26 = load i32, i32* %1, align 4
  ret i32 %26
}

declare dso_local i32 @TEST_ptr(i8*) #1

declare dso_local i8* @test_get_argument(i32) #1

declare dso_local i32 @create_ssl_ctx_pair(i32, i32, i32, i32, i32*, i32*, i8*, i8*) #1

declare dso_local i32 @TLS_server_method(...) #1

declare dso_local i32 @TLS_client_method(...) #1

declare dso_local i32 @TEST_error(i8*) #1

declare dso_local i32 @ADD_ALL_TESTS(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
